--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,10 @@
 </head>
 <body>
   <app-root></app-root>
+  <!-- <div app-root> -->
+  <!-- <div class="app-root"> -->
+
+  </div>
+  </div>
 </body>
 </html>
